# SchoolDigitalSignage

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: Buildroot.yml  buildroot.yml  cmake.yml  codeql-analysis.yml  t2.yml
Buildroot/: .config  .config_pi0w  .config_pi4
SDSClient/: CMakeLists.txt
SDSGUI/: CMakeLists.txt
SDSWebGUI/: package-lock.json
